# samp-plugin

./: CMakeLists.txt  LICENSE  README.md  samp-plugin.sln
samp-plugin/: config.cpp  config.h  image.h  in_stream_player.cpp  in_stream_player.h  main.cpp  plugin.cpp  plugin.h  plugin_gui.cpp  plugin_gui.h  plugin_render.cpp  plugin_render.h  samp-plugin.vcxproj  samp-plugin.vcxproj.filters  singleton.h
samp-plugin/imgui/: imgui.h  imgui_imaged_button.cpp  imgui_toggle_button.cpp  imgui_widgets.cpp
samp-plugin/rakhook/RakHook/: hooked_rakclient_interface.hpp  offsets.cpp  rakhook.cpp  rakhook.hpp  samp.cpp
samp-plugin/sampapi/: sampapi.lib
source/: main.cpp  main.h  offsets.hpp  plugin.cpp  plugin.hpp  samp.hpp
